# universal-router-solana

./: .env  .gitignore  Anchor.toml  Cargo.toml  DEVCONTAINER_README.md  DOCS_ANCHOR_DOCKER.md  Dockerfile.anchor-build  Makefile  README.md  RUNBOOKS.md  SECURITY.md  V1_Router_SCHEMA.md  ZPX9cXPQjrCtprRCgahAgL6sMQxsSrymJ7VatC6BA99.json  ZPXMD7SDQQMDMUPNkvzP6NewZfALqHDbCd3qLsQUrA9.json  ZPXhajNNajSB4AYQMBqZajugyhDVqJPgD9CaRczBQMZ.json  ZPXnnL3QUxWx2hFzm8yVErTkpkSgGeBMbDKxNCSDAn8.json  cargo-deny-advisories.json  deny.toml  deny.toml.bak  deployment.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json
.devcontainer/: Dockerfile  Dockerfile.anchor-build  README.md  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: anchor-build.yml  ci.yml  deploy-devnet.yml  devnet-multisig-smoke.yml  rust-tests.yml  supply_chain.yml
build-logs/: current_branch.txt  git_remotes.txt  git_status.txt
delete-later/evm-router/: MockERC20.sol  Router.sol
delete-later/evm-router/lib/: Hashing.sol
delete-later/evm-router/script/: HashVectors.t.sol
delete-later/evm-router/utils/: Create2Factory.sol
deny-exceptions/: deny-suggestions.toml
docs/: DEPLOYMENT.md  PHASE2_README.md  devnet-multisig-testplan.md  multisig-runbook.md
idl/: zoopx_router.654eeCFF.20250909.json
programs/mock_cpi/src/: lib.rs
programs/zoopx_router/: Cargo.toml
programs/zoopx_router/benches/: fee.rs
programs/zoopx_router/src/: lib.rs
programs/zoopx_router/tests/: router_pt.rs
programs/zpx_adapter/: Cargo.toml
programs/zpx_adapter/src/: lib.rs
programs/zpx_adapter_cctp_v1/: Cargo.toml
programs/zpx_adapter_cctp_v1/src/: lib.rs
programs/zpx_adapter_cctp_v2/: Cargo.toml
programs/zpx_adapter_cctp_v2/src/: lib.rs
programs/zpx_lp_vaults/: Cargo.toml
programs/zpx_lp_vaults/src/: lib.rs
programs/zpx_router/: Anchor.toml  Cargo.toml  OPERATIONAL_TWO_WALLETS.md  PROD_READINESS.md  README.md
programs/zpx_router/src/: hash.rs  lib.rs
programs/zpx_router/tests/: adapter_negative.rs  adapter_positive.rs  admin_unauthorized.rs  admin_withdraw.rs  admin_withdraw_authority_pda.rs  cctp_adapters_real.rs  cctp_spokes_integration.rs  compute_budget.rs  concurrency_stress.rs  cpi_failure.rs  finalize_auth.rs  finalize_replay.rs  forward_event_shape.rs  fuzz_edge.rs  fuzz_neg.rs  invalid_fee_ata.rs  mock_adapter_cpi.rs  negative_cases.rs  pda_flow.rs  pt_smoke.rs  registry_crud.rs  router_schema.rs  router_smoke.rs  unauthorized_config_update.rs  upgrade_migration.rs  usdc_cctp.rs  vault_patterns.rs
programs/zpx_router/tests/golden/: evm_generate.md  hashes.json
schemas/: unified-router-request.v1.json
scripts/: create-devnet-multisig.sh  deploy-devnet.sh  deploy_key_prepare.sh  export_key_to_env.sh  gen-evm-vectors.sh  run-devnet-smoke.sh  set-upgrade-authority.sh  smoke-devnet.sh  update_anchor_toml.py  upgrade-program-multisig-devnet.sh  upgrade-program.sh
secure-keys/: README.md
target_tmp/: .rustc_info.json
tests/: integration.rs  router.e2e.ts  zoopx_router.ts
tools/: classify_triage.py  triage_cargo_deny.py
tools/generate_golden_vectors/: Cargo.toml  README.md  generate.py
tools/generate_golden_vectors/src/: main.rs
triage/: README.md  cargo-deny-classification.json  cargo-deny-triage.csv  cargo-deny-triage.json  cargo-update-cmds.txt  deny-suggestions.toml  runbook.md
triage/upstream_issues/: README.md  issue_borsh.md  issue_curve25519.md  issue_ed25519.md  issue_ring.md
(+673 files in other folders)
