[package]
name = "zoopx-router"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zoopx_router"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-associated-token-account = "6"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dev-dependencies]
solana-program-test = "2"
solana-sdk = "2"
spl-token = { version = "6", default-features = false, features = ["no-entrypoint"] }
spl-token-2022 = { version = "6", default-features = false, features = ["no-entrypoint"] }
spl-memo = { version = "6", default-features = false, features = ["no-entrypoint"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
proptest = "1.4"
rand = "0.8"

criterion = "0.5"

[[bench]]
name = "fee"
harness = false
