[package]
name = "zpx_router"
version = "0.1.0"
edition = "2021"
description = "ZoopX Router (Solana) – thin, adapter-agnostic"

[lib]
crate-type = ["cdylib", "lib"]
name = "zpx_router"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
program-test = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1" }
tiny-keccak = { version = "2", features = ["keccak"] }


#[dev-dependencies]
# Keep dev-deps minimal to avoid Solana rbpf pinning conflicts during cargo build.
# Add back targeted crates as needed for local tests.
hex = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(feature = "program-test")'.dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
